--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
 }
-.slider{
+#slider{
     width: 750px;
     height: 500px;
     background-color: rgb(91, 89, 89);
@@ -46,6 +46,7 @@
 button{
     position: absolute;
     right: 50%;
+    z-index: 150;
     
 }
 .up{ 
