--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,18 @@
 .boxPreview{
     width: 200px;
     height: 100px;
+    opacity: 0.7;
 }
 
 .boxPreview img{
     width: 100%;
     height: 100px;
     object-fit: cover;
-    opacity: 0.7;
+    
 }
-
+.activeBox{
+    opacity: 1;
+}
 button{
     position: absolute;
     right: 50%;
