--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color:rgb(50, 59, 56);
+    
+    
 }
 #slider{
     width: 750px;
     height: 500px;
     background-color: rgb(91, 89, 89);
-    position: relative;
+    
     
 }
 .slide{
@@ -34,26 +37,35 @@
 .boxPreview{
     width: 200px;
     height: 100px;
-    opacity: 0.7;
+    opacity: 0.5;
+    border: 5px solid rgba(250, 248, 248, 0);
+    
+    
+ 
 }
-
+#preview{
+    position: relative;
+}
 .boxPreview img{
     width: 100%;
-    height: 100px;
+    height: calc(100px - 10px);
+
     object-fit: cover;
     
 }
 .activeBox{
     opacity: 1;
+    border: 5px solid rgb(36, 180, 185);
 }
 button{
     position: absolute;
-    right: 50%;
+    right: 45%;
     z-index: 150;
-    
+    background-color: rgba(106, 158, 203, 0.659);
+    color: rgb(15, 16, 16);
 }
 .up{ 
-    top:0;
+    
 }
 .down{
     bottom: 0;
